re-checkout for the deploy branch

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: Klemensas/action-autotag@stable
       with:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    - uses: actions/checkout@v3
     - shell: bash
       run: |
         git config --global user.name "GitHub Actions"
