--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,11 +16,11 @@ jobs:
         with:
           persist-credentials: false
       - name: Bump version
-        uses: 'phips28/gh-action-bump-version@v9.1.3'
+        uses: 'timjrobinson/gh-action-bump-version@master'
         with:
           commit-message: '{{version}}'
-          minor-wording: null
-          major-wording: null
+          minor-wording: ''
+          major-wording: ''
         env:
           GITHUB_TOKEN: ${{ secrets.TIM_PAT_TOKEN }}
       - name: Create tag
