--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@graphql-codegen/typescript-operations": "^2.2.0",
     "@graphql-codegen/typescript-resolvers": "2.4.1",
     "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "@layerzerolabs/scan-client": "^0.0.5",
     "@metamask/detect-provider": "^1.2.0",
     "@popperjs/core": "^2.9.2",
     "@sentry/browser": "^7.17.4",
@@ -160,8 +161,7 @@
     "wait-for-expect": "^3.0.2",
     "walletlink": "^2.1.5",
     "web3-utils": "^1.3.1",
-    "worker-loader": "^3.0.8",
-    "@layerzerolabs/scan-client": "^0.0.5"
+    "worker-loader": "^3.0.8"
   },
   "lint-staged": {
     "*.{js,ts,vue}": "eslint --cache --fix --max-warnings 0",
